--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,14 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "axios": "^0.20.0",
+    "bulma": "^0.9.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.4",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "sass": "^1.26.11",
+    "vite": "^1.0.0-rc.4"
   }
 }
