--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "tsc",
     "start": "electron .",
-    "debug": "electron . --development-mode --development-frontend-url http://localhost:3000"
+    "debug": "electron . --debug-mode"
   },
   "dependencies": {},
   "devDependencies": {
