--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "axios": "^0.20.0",
     "bulma": "^0.9.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-beta.12"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0",
