--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hedge-v2-client",
+  "productName": "Hedge",
   "version": "0.1.0",
   "license": "MIT",
   "main": "target/main.js",
@@ -8,9 +9,16 @@
     "start": "electron .",
     "debug": "electron . --debug-mode"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sqlite": "^4.0.14",
+    "sqlite3": "^5.0.0",
+    "tslib": "^2.0.1"
+  },
   "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/sqlite3": "^3.1.6",
     "electron": "^10.1.2",
+    "node-gyp": "^7.1.0",
     "typescript": "^4.0.3"
   }
 }
