--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "hedge-v2-client",
-  "productName": "Hedge",
+  "name": "hedge-v2",
+  "productName": "Hedge-v2",
   "version": "0.1.0",
   "license": "MIT",
   "main": "target/main.js",
   "scripts": {
     "compile": "tsc",
     "start": "electron .",
-    "debug": "electron . --debug-mode"
+    "debug": "electron . --debug-mode --debug-frontend-url http://localhost:3000 --debug-appdata-folder ./debug"
   },
   "dependencies": {
+    "koa": "^2.13.0",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
     "tslib": "^2.0.1"
@@ -17,7 +18,7 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/sqlite3": "^3.1.6",
-    "electron": "^10.1.2",
+    "electron": "10.1.2",
     "node-gyp": "^7.1.0",
     "typescript": "^4.0.3"
   }
