--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "tslib": "^2.0.1"
   },
   "devDependencies": {
+    "@types/koa": "^2.11.4",
     "@types/node": "^14.11.2",
     "@types/sqlite3": "^3.1.6",
     "electron": "10.1.2",
