--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "debug": "electron . $(cat args.dev.local)"
   },
   "dependencies": {
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
+    "@types/unzipper": "^0.10.3",
     "electron": "10.1.2",
     "typescript": "^4.0.5"
   }
