--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -1,1 +1,17 @@
 kotlin.code.style=official
+
+shadowVersion=4.0.3
+jlinkVersion=2.22.1
+
+javaVersion=11
+kotlinVersion=1.4.10
+
+javalinVersion=3.11.0
+ktormVersion=3.1.0
+sqliteVersion=3.32.3.2
+jacksonVersion=2.11.3
+slf4jVersion=1.7.30
+
+projectMainModule=com.heerkirov.hedge.server
+projectMainClass=com.heerkirov.hedge.server.ApplicationKt
+projectBinaryName=hedge-v2-server
