--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,59 +1,63 @@
 plugins {
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
-    id 'com.github.johnrengelman.shadow' version '4.0.3'
-    id 'org.beryx.jlink' version '2.22.1'
+    id 'org.jetbrains.kotlin.jvm' version "${kotlinVersion}"
+    id 'com.github.johnrengelman.shadow' version "${shadowVersion}"
+    id 'org.beryx.jlink' version "${jlinkVersion}"
 }
 
 group 'com.heerkirov.hedge.server'
 version '0.1.0'
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = javaVersion
+targetCompatibility = javaVersion
 
-mainClassName = 'com.heerkirov.hedge.server/com.heerkirov.hedge.server.ApplicationKt'
+mainClassName = "${projectMainModule}/${projectMainClass}"
 
 application {
-    mainClass = "com.heerkirov.hedge.server.ApplicationKt"
-    mainModule = "com.heerkirov.hedge.server"
+    mainClass.set(projectMainClass)
+    mainModule.set(projectMainModule)
 }
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk8", version: "1.4.10"
-    implementation group: "org.jetbrains.kotlin", name: "kotlin-reflect", version: "1.4.10"
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.11.3'
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
-    implementation group: 'me.liuwj.ktorm', name: 'ktorm-core', version: '3.1.0'
-    implementation group: 'me.liuwj.ktorm', name: 'ktorm-support-sqlite', version: '3.1.0'
+    implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk8", version: kotlinVersion
+    implementation group: "org.jetbrains.kotlin", name: "kotlin-reflect", version: kotlinVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: jacksonVersion
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: sqliteVersion
+    implementation group: 'me.liuwj.ktorm', name: 'ktorm-core', version: ktormVersion
+    implementation group: 'me.liuwj.ktorm', name: 'ktorm-support-sqlite', version: ktormVersion
+    implementation group: 'io.javalin', name: 'javalin', version: javalinVersion
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: slf4jVersion
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
 }
 
 compileJava {
     doFirst {
-        options.compilerArgs = [
-            '--module-path', classpath.asPath
-        ]
+        options.compilerArgs = ['--module-path', classpath.asPath]
     }
 }
-compileKotlin { kotlinOptions.jvmTarget = '11' }
-compileTestKotlin { kotlinOptions.jvmTarget = '11' }
+compileKotlin { kotlinOptions.jvmTarget = javaVersion }
+compileTestKotlin { kotlinOptions.jvmTarget = javaVersion }
+
+compileKotlin.destinationDir = compileJava.destinationDir
 
 shadowJar {
     manifestContentCharset 'utf-8'
     metadataCharset 'utf-8'
     manifest {
-        attributes 'Main-Class': 'com.heerkirov.hedge.server.ApplicationKt'
+        attributes 'Main-Class': projectMainClass
     }
 }
 
 jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options.set(['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'])
     launcher {
-        name = "hedge-v2-server"
+        name = projectBinaryName
     }
     mergedModule {
         additive = true
