--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,20 +2,32 @@
   "name": "hedge-v2-frontend",
   "version": "0.1.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "axios": "^0.20.0",
     "bulma": "^0.9.1",
+    "core-js": "^3.6.5",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-beta.13"
+    "vue-router": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.2",
-    "sass": "^1.26.11",
-    "vite": "^1.0.0-rc.6"
-  }
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "typescript": "^4.0.5"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
