--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -10,6 +10,7 @@ javalinVersion=3.11.0
 ktormVersion=3.1.0
 sqliteVersion=3.32.3.2
 jacksonVersion=2.11.3
+javeVersion=3.0.1
 slf4jVersion=1.7.30
 
 projectMainModule=com.heerkirov.hedge.server
