--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -12,6 +12,7 @@ sqliteVersion=3.32.3.2
 jacksonVersion=2.11.3
 javeVersion=3.0.1
 slf4jVersion=1.7.30
+junitVersion=4.13.1
 
 projectMainModule=com.heerkirov.hedge.server
 projectMainClass=com.heerkirov.hedge.server.ApplicationKt
