--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -11,6 +11,7 @@ ktormVersion=3.1.0
 sqliteVersion=3.32.3.2
 jacksonVersion=2.11.3
 javeVersion=3.0.1
+plistVersion=1.23
 slf4jVersion=1.7.30
 junitVersion=4.13.1
 
