语义分析: 完成方言框架的field类族设计; order类族修改; 完成部分filter类族

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -51,7 +51,10 @@ compileJava {
         options.compilerArgs = ['--module-path', classpath.asPath]
     }
 }
-compileKotlin { kotlinOptions.jvmTarget = javaVersion }
+compileKotlin {
+    kotlinOptions.jvmTarget = javaVersion
+    kotlinOptions.freeCompilerArgs = ["-Xinline-classes"] //启用inline class实验特性
+}
 compileTestKotlin { kotlinOptions.jvmTarget = javaVersion }
 
 compileKotlin.destinationDir = compileJava.destinationDir
