--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "axios": "^0.20.0",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.3",
-    "vue-router": "^4.0.0-rc.5"
+    "vue": "3.0.6",
+    "vue-router": "^4.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.9",
@@ -23,7 +23,7 @@
     "@vue/compiler-sfc": "^3.0.3",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.3"
   },
   "browserslist": [
     "> 1%",
