--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.20.0",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
-    "vue": "3.0.6",
+    "vue": "3.0.9",
     "vue-router": "^4.0.5"
   },
   "devDependencies": {
@@ -20,7 +20,7 @@
     "@vue/cli-plugin-router": "~4.5.9",
     "@vue/cli-plugin-typescript": "~4.5.9",
     "@vue/cli-service": "~4.5.9",
-    "@vue/compiler-sfc": "^3.0.3",
+    "@vue/compiler-sfc": "3.0.9",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "typescript": "^4.2.3"
