--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,14 @@
     "build": "node build/common/build.js"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "tslib": "^2.0.3",
+    "axios": "^0.21.1",
+    "tslib": "^2.3.0",
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
+    "@types/node": "14.17.0",
     "@types/unzipper": "^0.10.3",
-    "electron": "12.0.1",
-    "typescript": "^4.2.3"
+    "electron": "13.1.1",
+    "typescript": "^4.3.2"
   }
 }
