--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "bulma": "^0.9.1",
     "core-js": "^3.16.2",
-    "vue": "^3.2.6",
+    "vue": "^3.2.7",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@vue/compiler-sfc": "^3.2.6",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "browserslist": [
     "> 1%",
