--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "bulma": "^0.9.1",
     "core-js": "^3.16.2",
-    "vue": "^3.2.7",
+    "vue": "^3.2.8",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
@@ -20,10 +20,10 @@
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-typescript": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.2.6",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "typescript": "4.3.5"
+    "@vue/compiler-sfc": "^3.2.8",
+    "sass": "^1.39.0",
+    "sass-loader": "^10.2.0",
+    "typescript": "^4.4.2"
   },
   "browserslist": [
     "> 1%",
