--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "axios": "^0.21.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.21.3",
     "bulma": "^0.9.1",
-    "core-js": "^3.16.2",
-    "vue": "^3.2.8",
+    "core-js": "^3.17.2",
+    "vue": "^3.2.9",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
@@ -20,8 +20,8 @@
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-typescript": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.2.8",
-    "sass": "^1.39.0",
+    "@vue/compiler-sfc": "^3.2.9",
+    "sass": "~1.39.0",
     "sass-loader": "^10.2.0",
     "typescript": "^4.4.2"
   },
