--- a/cli/templates/source.template.yaml
+++ b/cli/templates/source.template.yaml
@@ -10,6 +10,7 @@ spec:
         displayName: ""
         type: ""
     pools:
-      - ""
+      - key: ""
+        title: ""
     relations:
       - 0
